--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/ApplePie.html">Apple Pie</a>
-    <a href="./recipes/Brownie.html">Brownie Pie</a>
-    <a href="./recipes/HoneyPie.html">Honey Pie</a>
+    <img src="./images/index_page.jpeg" alt="Dish image" width="150" />
+    <ul>
+      <li><a href="./recipes/ApplePie.html">Apple Pie</a></li>
+      <li><a href="./recipes/Brownie.html">Brownie Pie</a></li>
+      <li><a href="./recipes/HoneyPie.html">Honey Pie</a></li>
+    </ul>
+    <a href="./index.html">Return back</a>
   </body>
 </html>
