--- a/recipes/Brownie.html
+++ b/recipes/Brownie.html
@@ -8,5 +8,71 @@
   </head>
   <body>
     <h1>Brownie Pie recipe</h1>
+    <img src="../images/Brownie.png" alt="Brownie image" width="250" />
+    <h3>Description:</h3>
+    <p>
+      This brownie pie is <em>rich and fudgy</em> with a perfectly crisp
+      crust.<br />
+      Definitely serve with ice cream, whipped cream, and salted caramel.
+    </p>
+
+    <h3>Ingredients:</h3>
+    <p>
+        <strong>Crust:</strong>
+        <ul>
+            <li>1 ¼ cups all-purpose flour, plus more for rolling</li>
+            <li>1 tablespoon granulated sugar</li>
+            <li>½ teaspoon kosher salt</li>
+            <li>½ cup cold unsalted butter, cut into 1/2-inch pieces</li>
+            <li>3 tablespoons ice water, or more as needed</li>
+        </ul>
+        <strong>Filling:</strong>
+        <ul>
+            <li>10 tablespoons unsalted butter, melted and cooled</li>
+            <li>¾ cup granulated sugar</li>
+            <li>2 large eggs, at room temperature</li>
+            <li>1 large egg yolk, at room temperature</li>
+            <li>2 tablespoons canola oil</li>
+            <li>1 teaspoon vanilla extract</li>
+            <li>¾ cup unsweetened cocoa powder</li>
+            <li>½ cup all-purpose flour</li>
+            <li>2 teaspoons instant espresso granules</li>
+            <li>½ teaspoon kosher salt</li>
+            <li>½ cup chopped walnuts or hazelnuts</li>
+            <li>½ cup semisweet chocolate chips, divided</li>
+        </ul>
+    </p>
+    <h3>Steps:</h3>
+    <p>
+        <ol>
+            <li>For the crust, combine flour, sugar, and teaspoon salt in a food processor and <br>
+                pulse about 3 times until combined. Scatter cold butter over flour mixture in <br> 
+                food processor. Pulse about 6 times until butter resembles pea-sized pieces. <br>
+                Drizzle 3 tablespoons water over butter mixture. Pulse about 6 times until couscous-like <br>
+                beads of dough form, adding 1 more tablespoon ice water if needed.</li>
+            <li>Transfer dough to a work surface, and press into a single mass. Shape and flatten <br>
+                dough into a disk. Wrap in plastic wrap, and chill for at least 1 hour or up to 2 days.</li>
+            <li>Unwrap dough and place on a lightly floured work surface. Let dough sit at room temperature <br>
+                for 10 minutes to soften. Dust top of dough with flour. Using a lightly floured rolling pin, <br>
+                roll disk into a 12-inch circle. Place in a 9-inch pie plate, pressing into bottom and up sides<br>
+                of pie plate. Fold edges under, and crimp as desired. Cover with plastic wrap, <br>
+                and freeze for 30 minutes.</li>
+            <li>Preheat the oven to 350 degrees F (175 degrees C). Place parchment paper over dough in pie plate;<br>
+                fill with pie weights or dried beans.</li>
+            <li>Bake in the preheated oven until crust is starting to set, about 15 minutes. <br>
+                Carefully remove pie plate from oven and take off parchment paper and pie weights. <br>
+                Return pie plate to oven, and bake until pie crust is light golden brown, 8 to 12 minutes. <br>
+                Transfer to a wire rack; let cool to room temperature, about 20 minutes.</li>
+            <li>Whisk together melted butter, sugar, eggs, egg yolk, canola oil, and vanilla extract <br>
+                in a bowl until blended and smooth. Whisk in cocoa, flour, instant espresso, and salt <br>
+                just until combined. Stir in nuts and 1/4 cup chocolate chips. Scrape mixture into cooled crust, <br>
+                and smooth top with a small offset spatula. Sprinkle remaining 1/4 cup chocolate chips <br>
+                on top of the pie.</li>
+            <li>Bake in the preheated oven until a toothpick inserted in the center comes out clean, <br>
+                30 to 35 minutes, covering the crust with aluminum foil if it gets too dark. <br>
+                Let cool 20 minutes before serving.</li>
+        </ol>
+    </p>
+    <a href="../index.html">Return back</a>
   </body>
 </html>
