--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <h1>Odin Recipes</h1>
     <img src="./images/index_page.jpeg" alt="Dish image" width="150" />
     <ul>
-      <li><a href="./recipes/ApplePie.html">Apple Pie</a></li>
       <li><a href="./recipes/Brownie.html">Brownie Pie</a></li>
+      <li><a href="./recipes/AppleDonuts.html">Apple Donuts</a></li>
       <li><a href="./recipes/HoneyPie.html">Honey Pie</a></li>
     </ul>
   </body>
