--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
-    <img src="./images/index_page.jpeg" alt="Dish image" width="150" />
+    <img src="./images/MainPage_img.jpg" alt="Dessert image" width="250" />
     <ul>
       <li><a href="./recipes/Brownie.html">Brownie Pie</a></li>
       <li><a href="./recipes/AppleDonuts.html">Apple Donuts</a></li>
-      <li><a href="./recipes/HoneyPie.html">Honey Pie</a></li>
+      <li><a href="./recipes/ApplePie.html">Apple Pie</a></li>
     </ul>
   </body>
 </html>
