Add some css styles Practice different selectors

--- a/recipes/AppleDonuts.html
+++ b/recipes/AppleDonuts.html
@@ -5,12 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Apple Donuts recipe</title>
+
+    <link rel="stylesheet" href="../style.css" />
   </head>
   <body>
     <h1>Apple Donuts</h1>
-    <img src="../images/Apple_Donuts.png" alt="Donuts Image" width="250" />
+    <img class="pageImg" src="../images/Apple_Donuts.png" alt="Donuts Image" />
     <h3>Description:</h3>
-    <p>
+    <p class="descrip">
       All the world's great donuts are fried, except there are a few rare
       examples <br />
       of when they're not—and this incredibly delicious and easy-to-make apple
@@ -22,7 +24,7 @@
       more time eating donuts.
     </p>
     <h3>Ingredients:</h3>
-    <ul>
+    <ul class="unOrdered list">
       <li>2 cups fresh apple cider</li>
       <li>2 cups all-purpose flour</li>
       <li>¾ teaspoon baking powder</li>
@@ -39,7 +41,7 @@
       <li>1 large egg</li>
     </ul>
     <h3>Steps:</h3>
-    <ol>
+    <ol class="ordered list">
       <li>
         Preheat the oven to 375 degrees F (190 degrees C). Butter two 6-cup
         donut pans.
