--- a/recipes/ApplePie.html
+++ b/recipes/ApplePie.html
@@ -5,14 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Honey Pie</title>
+
+    <link rel="stylesheet" href="../style.css" />
   </head>
   <body>
     <h1>Honey Pie recipe</h1>
-    <img src="../images/Apple_Pie.png" alt="Apple pie image" width="250" />
+    <img class="pageImg" src="../images/Apple_Pie.png" alt="Apple pie image" />
     <h3>Description:</h3>
-    <p>A picturesque as well as delicious apple pie</p>
+    <p class="descrip">A picturesque as well as delicious apple pie</p>
     <h3>Ingredients:</h3>
-    <ul>
+    <ul class="unOrdered list">
       <li>2 ½ cups all-purpose flour</li>
       <li>2 tablespoons white sugar</li>
       <li>1 teaspoon salt</li>
@@ -37,7 +39,7 @@
       <li>1 tablespoon white sugar</li>
     </ul>
     <h3>Steps:</h3>
-    <ol>
+    <ol class="ordered list">
       <li>
         Preheat oven to 375°. On a lightly floured surface, roll half of the
         dough <br />
