--- a/recipes/Brownie.html
+++ b/recipes/Brownie.html
@@ -5,12 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Brownie recipe</title>
+
+    <link rel="stylesheet" href="../style.css" />
   </head>
   <body>
     <h1>Brownie Pie recipe</h1>
-    <img src="../images/Brownie.png" alt="Brownie image" width="250" />
+    <img class="pageImg" src="../images/Brownie.png" alt="Brownie image"/>
     <h3>Description:</h3>
-    <p>
+    <p class="descrip">
       This brownie pie is <em>rich and fudgy</em> with a perfectly crisp
       crust.<br />
       Definitely serve with ice cream, whipped cream, and salted caramel.
@@ -19,7 +21,7 @@
     <h3>Ingredients:</h3>
     <p>
         <strong>Crust:</strong>
-        <ul>
+        <ul class="unOrdered list">
             <li>1 ¼ cups all-purpose flour, plus more for rolling</li>
             <li>1 tablespoon granulated sugar</li>
             <li>½ teaspoon kosher salt</li>
@@ -27,7 +29,7 @@
             <li>3 tablespoons ice water, or more as needed</li>
         </ul>
         <strong>Filling:</strong>
-        <ul>
+        <ul class="unOrdered list">
             <li>10 tablespoons unsalted butter, melted and cooled</li>
             <li>¾ cup granulated sugar</li>
             <li>2 large eggs, at room temperature</li>
@@ -44,7 +46,7 @@
     </p>
     <h3>Steps:</h3>
     <p>
-        <ol>
+        <ol class="ordered list">
             <li>For the crust, combine flour, sugar, and teaspoon salt in a food processor and <br>
                 pulse about 3 times until combined. Scatter cold butter over flour mixture in <br> 
                 food processor. Pulse about 6 times until butter resembles pea-sized pieces. <br>
