--- a/index.html
+++ b/index.html
@@ -3,14 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <title>Recipes</title>
+
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <h1>Odin Recipes</h1>
-    <img src="./images/MainPage_img.jpg" alt="Dessert image" width="250" />
-    <ul>
-      <li><a href="./recipes/Brownie.html">Brownie Pie</a></li>
-      <li><a href="./recipes/AppleDonuts.html">Apple Donuts</a></li>
-      <li><a href="./recipes/ApplePie.html">Apple Pie</a></li>
-    </ul>
+    <img class="pageImg" src="./images/MainPage_img.jpg" alt="Dessert image" />
+    <div id="indexList">
+      <ul class="unOrdered list">
+        <li><a href="./recipes/Brownie.html">Brownie Pie</a></li>
+        <li><a href="./recipes/AppleDonuts.html">Apple Donuts</a></li>
+        <li><a href="./recipes/ApplePie.html">Apple Pie</a></li>
+      </ul>
+    </div>
   </body>
 </html>
