Add bottom part of the site

--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
         <li><a href="./recipes/ApplePie.html">Apple Pie</a></li>
       </ul>
     </div>
+    <p>Hello + My + frined + ddddd</p>
   </body>
 </html>
